2009-08-12  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Eric Seidel.

        HTML 5 database and LocalStorage is not persistent on the Symbian port of QtWebKit
        https://bugs.webkit.org/show_bug.cgi?id=28175

        Call QDir::toNativeSeparators() before the path is passed to the OS.

        Based on work by David Leong.
        
        * platform/qt/FileSystemQt.cpp:
        (WebCore::pathByAppendingComponent):

2009-08-12  Eric Carlson  <eric.carlson@apple.com>

        Tiger build fix.

        * accessibility/mac/AccessibilityObjectWrapper.mm: 
            Define NSAccessibilityTimelineSubrole for Tiger.

2009-08-12  Dirk Schulze  <krit@webkit.org>

        Reviewed by Ariya Hidayat.

        Minor build-fix for SVG Filter. Use getUnmultipliedImageData instead
        of getImageData. This changed since r47099.

        * platform/graphics/filters/FEColorMatrix.cpp:
        (WebCore::FEColorMatrix::apply):

2009-08-12  Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Oliver Hunt.

        <video> and <audio> controller should be accessible
        https://bugs.webkit.org/show_bug.cgi?id=28081

        Test: accessibility/media-element.html

        * GNUmakefile.am:
        * WebCore.gypi:
        * WebCore.pro:
        * WebCore.vcproj/WebCore.vcproj:
        * WebCore.xcodeproj/project.pbxproj:
        * WebCoreSources.bkl:
            Add AccessibilityMediaControls.cpp/.h

        * accessibility/AXObjectCache.cpp:
        * accessibility/AXObjectCache.h:
        (WebCore::AXObjectCache::getOrCreate):
            Create AccessibilityMediaControl. Update Copyright

        * accessibility/AccessibilityMediaControls.cpp:
        * accessibility/AccessibilityMediaControls.h:
            Added.

        * accessibility/AccessibilityObject.cpp:
        * accessibility/AccessibilityObject.h:
            Add isMediaTimeline. Update Copyright.

        * accessibility/AccessibilitySlider.h: